22 jpa 테스트 완료

--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div class="container">
     <form action="/members/new" method="post">
@@ -13,6 +9,6 @@
         </div>
         <button type="submit">등록</button>
     </form>
-</div> <!-- /container --
+</div> <!-- /container -->
 </body>
 </html>
