--- a/src/main/resources/templates/members/memberList.html
+++ b/src/main/resources/templates/members/memberList.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div class="container">
   <div>
@@ -22,6 +18,6 @@
       </tbody>
     </table>
   </div>
-</div> <!-- /container --
+</div> <!-- /container -->
 </body>
 </html>
